# carbonenv

./: .gitignore  Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
agents/: heuristic_agent.py  random_agent.py  train_agent.py
env/: __init__.py  carbon_env.py  models.py
frontend/static/: script.js  style.css
frontend/templates/: dashboard.html
graders/: __init__.py
server/: app.py
tasks/: __init__.py  task1.py  task2.py  task3.py
