[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "carbon-credit-env"
version = "1.0.0"
description = "Carbon-aware job scheduling RL environment"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Anmol" }]
keywords = ["reinforcement-learning", "carbon", "openenv"]
dependencies = [
    "flask>=3.0.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
serve = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["env*", "tasks*", "graders*", "agents*", "server*"]
